<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/group_general"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_explore"
            android:icon="@drawable/ic_explore"
            android:title="@string/nav_item_explore" />
        <item
            android:id="@+id/nav_categories"
            android:icon="@drawable/ic_category"
            android:title="@string/nav_item_categories" />
        <item
            android:id="@+id/nav_chat"
            android:icon="@drawable/ic_chat"
            android:title="@string/nav_item_chat" />
        <item
            android:id="@+id/nav_account"
            android:icon="@drawable/ic_account"
            android:title="@string/nav_item_account" />
    </group>

    <group
        android:id="@+id/group_other"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_favs"
            android:icon="@drawable/ic_favs"
            android:title="@string/nav_item_favorites" />
        <item
            android:id="@+id/nav_qrcode_scan"
            android:icon="@drawable/ic_settings_overscan"
            android:title="@string/nav_item_qrcode" />
        <item
            android:id="@+id/nav_converter"
            android:icon="@drawable/ic_converter"
            android:title="@string/nav_item_converter" />
    </group>
    <group
        android:id="@+id/group_help"
        android:checkableBehavior="single">
        <!-- <item
             android:id="@+id/nav_share"
             android:icon="@drawable/ic_share"
             android:title="@string/nav_item_share" />-->
        <item
            android:id="@+id/nav_faq"
            android:icon="@drawable/ic_help"
            android:title="@string/nav_item_help" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/nav_item_settings" />
    </group>
</menu>