<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        app:cardElevation="3dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!--COMMANDES -->
            <LinearLayout
                style="@style/card_item_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_order"
                    android:tint="@color/textColorPrimaryDark" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="35dp"
                    android:text="@string/user_orders"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textColor="@color/textColorPrimaryDark"
                    android:textSize="18sp" />
            </LinearLayout>


            <!--REQUETES-->
            <LinearLayout
                style="@style/card_item_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_request"
                    android:tint="@color/textColorPrimaryDark" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="35dp"
                    android:text="@string/user_requests"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textColor="@color/textColorPrimaryDark"
                    android:textSize="18sp" />
            </LinearLayout>

            <!--PROMOTIONS PRODUITS-->
            <LinearLayout
                style="@style/card_item_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="0dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_card_giftcard"
                    android:tint="@color/textColorPrimaryDark" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="35dp"
                    android:text="@string/user_promotions"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textColor="@color/textColorPrimaryDark"
                    android:textSize="18sp" />
            </LinearLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        app:cardCornerRadius="0dp"
        app:cardElevation="3dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!--DETAILS UTILISATEURS -->
            <LinearLayout
                style="@style/card_item_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_details"
                    android:tint="@color/textColorPrimaryDark" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="35dp"
                    android:text="@string/user_details"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textColor="@color/textColorPrimaryDark"
                    android:textSize="18sp" />
            </LinearLayout>


            <!--DETAILS ENTREPRISE-->
            <LinearLayout
                style="@style/card_item_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="0dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_briefcase"
                    android:tint="@color/textColorPrimaryDark" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="35dp"
                    android:text="@string/enterprise_details"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textColor="@color/textColorPrimaryDark"
                    android:textSize="18sp" />
            </LinearLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        app:cardCornerRadius="0dp"
        app:cardElevation="3dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!--CONVERTISSEUR DEVISE -->
            <LinearLayout
                style="@style/card_item_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="0dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_converter"
                    android:tint="@color/textColorPrimaryDark" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="35dp"
                    android:text="@string/nav_item_converter"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textColor="@color/textColorPrimaryDark"
                    android:textSize="18sp" />
            </LinearLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        app:cardCornerRadius="0dp"
        app:cardElevation="3dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!--AIDE -->
            <LinearLayout
                style="@style/card_item_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_help"
                    android:tint="@color/textColorPrimaryDark" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="35dp"
                    android:text="@string/nav_item_help"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textColor="@color/textColorPrimaryDark"
                    android:textSize="18sp" />
            </LinearLayout>


            <!--PARAMETRES-->
            <LinearLayout
                style="@style/card_item_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="0dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_settings"
                    android:tint="@color/textColorPrimaryDark" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="35dp"
                    android:text="@string/nav_item_settings"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textColor="@color/textColorPrimaryDark"
                    android:textSize="18sp" />
            </LinearLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>
